--- a/SantaClausAlert/MainPage.xaml
+++ b/SantaClausAlert/MainPage.xaml
@@ -2,12 +2,12 @@
     x:Class="SantaClausAlert.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:SantaClausAlert"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:SantaClausAlert"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -18,35 +18,41 @@
 
         </Grid.ColumnDefinitions>
         <Grid Grid.Column="0">
-        <Grid.RowDefinitions>
+            <Grid.RowDefinitions>
 
-            <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
 
-            <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
 
-            <RowDefinition Height="*" />
+                <RowDefinition Height="*" />
 
-        </Grid.RowDefinitions>
-            <MediaElement x:Name="me"></MediaElement>
-            <StackPanel Orientation="Horizontal" Margin="10">
-        <Button Content="Open file"   VerticalAlignment="Top" Click="Button_Click" Margin="0,0,10,0"/>
-                <Button Content="Open Video"   VerticalAlignment="Top" Click="ButtonVideo_OnClick" Margin="0,0,10,0"/>
-                <Button Content="Close Video"   VerticalAlignment="Top" Click="ButtonVideoClose_OnClick" Margin="0,0,10,0"/>
-        </StackPanel>
-        <controls:CameraPreview
-
-            x:Name="CameraPreviewControl"
-
-            Grid.Row="2"
-
-            IsFrameSourceGroupButtonVisible="True" />
+            </Grid.RowDefinitions>
+            <MediaElement x:Name="me" />
+            <StackPanel Margin="10" Orientation="Horizontal">
+                <Button
+                    Margin="0,0,10,0"
+                    VerticalAlignment="Top"
+                    Click="Button_Click"
+                    Content="Open file" />
+                <Button
+                    Margin="0,0,10,0"
+                    VerticalAlignment="Top"
+                    Click="ButtonVideo_OnClick"
+                    Content="Open Video" />
+                <Button
+                    Margin="0,0,10,0"
+                    VerticalAlignment="Top"
+                    Click="ButtonVideoClose_OnClick"
+                    Content="Close Video" />
+            </StackPanel>
+            <controls:CameraPreview
+                x:Name="CameraPreviewControl"
+                Grid.Row="2"
+                IsFrameSourceGroupButtonVisible="True" />
         </Grid>
         <ListView
-
             x:Name="ListViewResults"
-            
             Grid.Column="1"
-
             ItemsSource="{Binding}">
 
             <ListView.ItemTemplate>
@@ -56,7 +62,6 @@
                     <StackPanel>
 
                         <Image Source="{Binding Image}" />
-
 
 
                         <TextBlock Text="{Binding Info}" />
